--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -107,23 +107,29 @@
         let projection = d3.geoAlbersUsa()
             .scale(1200).translate([width/2, 2*height/5])
         let geoJson = topojson.feature(data[0],data[0].objects.cb_2018_us_state_20m).features;
-        console.log(topojson.feature(data[0],data[0].objects.cb_2018_us_state_20m).features)
         let geo_generator = d3.geoPath().projection(projection);
 
         // Step 5: first load 2008 to 2016 data into dictionary
         let election_data = {}
-        d3.map(data[1],function (d) {election_data[d.state] =
-                    {   name: d.state,
-                        totals: [+d.total_2008,+d.total_2012,+d.total_2016],
-                        dems:[+d.dem_2008,+d.dem_2012,+d.dem_2016],
-                        gop:[+d.gop_2008,+d.gop_2012,+d.gop_2016]}})
+        d3.map(data[1],function (d) {election_data[d.fips_code] =
+          {   name: d.county,
+            totals: [+d.total_2008,+d.total_2012,+d.total_2016],
+            dems:[+d.dem_2008,+d.dem_2012,+d.dem_2016],
+            gop:[+d.gop_2008,+d.gop_2012,+d.gop_2016]}})
         d3.map(data[2],function (d) {
-            try {
-                election_data[d.state]['totals'].push(+d.total_votes)
-                election_data[d.state]['dems'].push(+d.votes_dem)
-                election_data[d.state]['gop'].push(+d.votes_gop)}
+          try {
+            if (election_data[d.county_fips]){
+              election_data[d.county_fips].state_name = d.state_name
+              election_data[d.county_fips]['totals'].push(+d.total_votes)
+              election_data[d.county_fips]['dems'].push(+d.votes_dem)
+              election_data[d.county_fips]['gop'].push(+d.votes_gop)}
+            }
             catch (error)
             {console.log(error)}})
+        a = Object.values(election_data);
+
+        // Converting election_data into state_data
+        let state_data = d3.group(a,function(d){return d.state_name});
 
         let mapCanvas = svg.append('g')
         mapCanvas.selectAll('path')
@@ -134,7 +140,12 @@
             .attr("d",geo_generator)
             .style("fill",function (d){
                 try{
-                    if(election_data[d.properties.NAME]["dems"][3]<election_data[d.properties.NAME]["gop"][3]){
+                    console.log('elsss: ', state_data.get(d.properties.NAME));
+
+                    console.log('dem: ',state_data.get(d.properties.NAME).reduce(function(prev, cur) { return prev + cur.dems[3];}, 0));
+                    console.log('gop: ',state_data.get(d.properties.NAME).reduce(function(prev, cur) { return prev + cur.gop[3];}, 0));
+
+                    if(state_data.get(d.properties.NAME).reduce(function(prev, cur) { return prev + cur.dems[3];}, 0)<state_data.get(d.properties.NAME).reduce(function(prev, cur) { return prev + cur.gop[3];}, 0)){
                         return dem_color
                     }
                     else{
@@ -143,11 +154,11 @@
                 }
                 catch (error)
                 {
+                    console.log(error);
                     return "white"
                 }
             })
             .on("mousemove",function (mouseData,d){
-                console.log('feeps: ',d.properties)
                 tooltip_html(d.properties.NAME)
                 d3.select('#tooltip')
                     .style("opacity",.8)
@@ -171,9 +182,10 @@
    function tooltip_html(names){
     let margin={x:30,y:0}
     let plot_height = 90
-    console.log(election_data)
-    let history_dems = election_data[names]['dems']
-    let history_gop = election_data[names]['gop']
+    console.log('name: ', names)
+    console.log('names: ',names,state_data.get(names))
+    let history_dems = [state_data.get(names).reduce(function(prev, cur) { return prev + cur.dems[0];}, 0),state_data.get(names).reduce(function(prev, cur) { return prev + cur.dems[1];}, 0),state_data.get(names).reduce(function(prev, cur) { return prev + cur.dems[2];}, 0),state_data.get(names).reduce(function(prev, cur) { return prev + cur.dems[3];}, 0)]
+    let history_gop = [state_data.get(names).reduce(function(prev, cur) { return prev + cur.gop[0];}, 0),state_data.get(names).reduce(function(prev, cur) { return prev + cur.gop[1];}, 0),state_data.get(names).reduce(function(prev, cur) { return prev + cur.gop[2];}, 0),state_data.get(names).reduce(function(prev, cur) { return prev + cur.gop[3];}, 0)]
     let extent = d3.extent([history_dems,history_gop].flat(),function (d){return d})
     let xScale=d3.scaleLinear().domain([2006,2020]).range([0,150])
     let yScale=d3.scaleLinear().domain(extent).range([plot_height,0])
@@ -194,7 +206,7 @@
            .append("text")
            .attr("x",20)
            .attr('y',1)
-           .text(election_data[names]['name'])
+           .text(names)
            .attr("class","county_name")
 
        svg_tooltip.selectAll('g').append('path').attr("d",demsLine).attr("class","dems")
