--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -67,7 +67,7 @@
 </head>
 <body>
 <div id="caption">
-    US Election by County (2008 - 2020).
+    US Election by State (2008 - 2020).
 </div>
 
 
